# image-sign

./: .gitmodules  CMakeLists.txt  README.md  build.sh
include/: version.hpp.in
src/: main.cpp
